impl: using the batch adapter to create an easier way to update